testdata/baselines/reference/submodule/conformance/importTag2.errors.txt
/foo.js(6,13): error TS2503: Cannot find namespace 'types'.


==== /types.ts (0 errors) ====
    export interface Foo {
        a: number;
    }
    
==== /foo.js (1 errors) ====
    /**
     * @import * as types from "./types"
     */
    
    /**
     * @param { types.Foo } foo
                ~~~~~
!!! error TS2503: Cannot find namespace 'types'.
     */
    export function f(foo) {}
    